# TO-DO-list

./: .env  Cargo.toml  Dockerfile  index.html  render.yaml
src/: main.rs
static/: index.html
