[package]
name = "wasm_project"
version = "0.1.0"
edition = "2024"



[dependencies]
postgres = "0.19"
wasm-bindgen = "0.2"
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
actix-files = "0.6"
dotenvy = "0.15"


